--- a/Front-end/src/App.css
+++ b/Front-end/src/App.css
@@ -95,8 +95,8 @@
 
 
 
-.App-header {
-  width: 100%;
+.App-header, .Encabezado {
+  width: 100vw;
   height: 8vh;
   background-color: #ffffff;
   display: block;
@@ -105,14 +105,8 @@
   justify-content: center;
   font-size: 5vh;
   color: rgb(0, 60, 255);
+  margin: 0px;
 }
-
-.optiones-button{
-  text-align: right;
-}
-
-
-
 
 
 
