--- a/Front-end/src/App.css
+++ b/Front-end/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .flexbox-container-profile div:first-child{
-  width: 25%;
+  width: 30%;
   margin-right: 5%;
 	padding: 0%;
   background: #1653fc;
@@ -33,7 +33,7 @@
 }
 
 .flexbox-container-profile > div{
-  width: 30%;
+  width: 40%;
   margin-right: 5%;
 	padding: 10px;
   background: #ffffff;
@@ -197,10 +197,17 @@
 
 /*-------------------PROFILE----------------------*/
 
-.column-one-profile, .column-two-profile, .column-three-profile{
+.column-one-profile, .column-two-profile{
   border-radius: 2%;
   width: 100%;
 }
+
+.column-three-profile{
+  border-radius: 2%;
+  width: 80%;
+
+}
+
 
 .photo-profile{
   border: 0.1px solid black;
@@ -210,9 +217,10 @@
 div.card-profile{
   margin: 0%;
   padding:0%;
-  width: 30vw;
+  width: 100%;
 }
 
 div.card{
   width: 100%;
 }
+/* card-profile collapse show */
