Add reportes Capataz, Css, Navbar, SideBar

--- a/Front-end/src/css/ContentRouters.css
+++ b/Front-end/src/css/ContentRouters.css
@@ -6,5 +6,5 @@
 .content {
   margin-left: 6vw; /* Este margen debe coincidir con el ancho de la sidebar */
   padding: 20px;
-  width: 100%;
+  width: 94vw;
 }
