--- a/Front-end/src/css/App.css
+++ b/Front-end/src/css/App.css
@@ -173,12 +173,13 @@
 
 .App-header, .Encabezado {
   width: 90vw;
-  height: 8vh;
+  height: 16vh;
   background-color: #ffffff;
-  display: block;
+  /* display: block; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  vertical-align: middle;
   font-size: 5vh;
   color: rgb(0, 60, 255);
   margin: 0px;
